# leadzai_challenge

./: .gitignore  README.md  main.py  pyproject.toml
.docs/: HOW_TO_USE.md
paginator_generator/: error_handler.py  generator.py
reports/junit/: junit.xml
tests/: conftest.py  test_cli_run.py  test_pagination_generator.py  test_pagination_generator_error_handler.py  test_pagination_generator_integration.py
