[tool.poetry]
name = "challenge_leadzai"
version = "0.1.0"
description = "leadzai challenge about pagination"
authors = ["Alceu-wv <alceu.wv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
